@@ -1,0 +1,92 @@
+#ifndef _CURL_CONFIG_DJGPP_H
+#define _CURL_CONFIG_DJGPP_H
+
+#define OS       "djgpp"
+#define PACKAGE  "curl"
+
+#define CURL_CA_BUNDLE  "/dev/env/CURL_CA_BUNDLE"
+
+#if (DJGPP_MINOR >= 4)
+/* #define HAVE_DLOPEN 1 maybe not (DXE3) */
+#endif
+
+#if 1     /* use ioctlsocket() via fsext'ed fcntl() */
+  #define HAVE_O_NONBLOCK 1
+#else
+  #define HAVE_IOCTLSOCKET 1
+#endif
+
+#define HAVE_ALARM             1
+#define HAVE_ARPA_INET_H       1
+#define HAVE_CLOSESOCKET       1
+#define HAVE_FCNTL_H           1
+#define HAVE_GETHOSTBYADDR     1
+#define HAVE_GETHOSTNAME       1
+#define HAVE_GETPASS           1
+#define HAVE_GETSERVBYNAME     1
+#define HAVE_GETTIMEOFDAY      1
+#define HAVE_INET_ADDR         1
+#define HAVE_INET_NTOA         1
+#define HAVE_IO_H              1
+#define HAVE_MALLOC_H          1
+#define HAVE_MEMORY_H          1
+#define HAVE_NETDB_H           1
+#define HAVE_NETINET_IN_H      1
+#define HAVE_NET_IF_H          1
+#define HAVE_PERROR            1
+#define HAVE_SELECT            1
+#define HAVE_SETJMP_H          1
+#define HAVE_SETVBUF           1
+#define HAVE_SIGNAL            1
+#define HAVE_SIGACTION         1
+#define HAVE_SIGSETJMP         1
+#define HAVE_SOCKET            1
+#define HAVE_STRCASECMP        1
+#define HAVE_STRDUP            1
+#define HAVE_STRFTIME          1
+#define HAVE_STRICMP           1
+#define HAVE_STRSTR            1
+#define HAVE_SYS_SOCKET_H      1
+#define HAVE_SYS_STAT_H        1
+#define HAVE_SYS_TYPES_H       1
+#define HAVE_TERMIOS_H         1
+#define HAVE_TIME_H            1
+#define HAVE_UNAME             1
+#define HAVE_UNISTD_H          1
+#define HAVE_VPRINTF           1
+
+#define RETSIGTYPE             void
+#define SIZEOF_LONG_DOUBLE     16
+#define SIZEOF_LONG_LONG       8
+#define STDC_HEADERS           1
+#define TIME_WITH_SYS_TIME     1
+
+#define BSD
+#define USE_ZLIB
+
+/* #define MALLOCDEBUG */
+
+#ifdef HAVE_OPENSSL_ENGINE_H   /* on cmd-line */
+  #define HAVE_OPENSSL_X509_H    1
+  #define HAVE_OPENSSL_SSL_H     1
+  #define HAVE_OPENSSL_RSA_H     1
+  #define HAVE_OPENSSL_PEM_H     1
+  #define HAVE_OPENSSL_ERR_H     1
+  #define HAVE_OPENSSL_CRYPTO_H  1
+  #define HAVE_LIBSSL            1
+  #define HAVE_LIBCRYPTO         1
+  #define OPENSSL_NO_KRB5        1
+#endif
+
+#define in_addr_t  u_long
+#define socklen_t  int
+#define ssize_t    int
+
+#include <stdlib.h>
+#include <string.h>
+#include <tcp.h>    /* Watt-32 API */
+
+#undef word
+
+#endif  /* _CURL_CONFIG_DJGPP_H */
+
